定义了数据模型

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,7 +8,7 @@
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 		
 		
-		<title>Modern & Minimal Resume / CV & vCard Template</title>
+		<title>HomePage</title>
 		
 		
 		<!--=====================================================
@@ -290,7 +290,7 @@
 									<div class='service' >
 										
 										<div class='icon' >
-											<i class='ion-social-wordpress-outline' ></i>
+											<i class='icon-basic-mouse' ></i>
 										</div>
 										
 										<div class='content' >
@@ -863,7 +863,7 @@
 								
 								<li data-groups='["web","tech"]' >
 									<div class='inner' >
-										<img src='img/portfolio/1.jpg' alt>
+										<img src='{% static "img/portfolio/1.jpg" %}' alt>
 										
 										<div class='overlay' >
 											
@@ -876,7 +876,7 @@
 												<figure>
 													
 													<!--project popup image-->
-													<img src='img/portfolio/1.jpg' alt>
+													<img src='{% static "img/portfolio/1.jpg" %}' alt>
 												
 												</figure>
 												<div class='content' >
@@ -900,7 +900,7 @@
 								
 								<li data-groups='["tech","photography"]' >
 									<div class='inner' >
-										<img src='img/portfolio/2.jpg' alt>
+										<img src='{% static "img/portfolio/2.jpg" %}' alt>
 										
 										<div class='overlay' >
 											
@@ -913,7 +913,7 @@
 												<figure>
 													
 													<!--project popup image-->
-													<img src='img/portfolio/2.jpg' alt>
+													<img src='{% static "img/portfolio/2.jpg" %}' alt>
 												
 												</figure>
 												<div class='content' >
@@ -937,7 +937,7 @@
 								
 								<li data-groups='["web","photography"]' >
 									<div class='inner' >
-										<img src='img/portfolio/3.jpg' alt>
+										<img src='{% static "img/portfolio/3.jpg" %}' alt>
 										
 										<div class='overlay' >
 											
@@ -950,7 +950,7 @@
 												<figure>
 													
 													<!--project popup image-->
-													<img src='img/portfolio/3.jpg' alt>
+													<img src='{% static "img/portfolio/3.jpg" %}' alt>
 												
 												</figure>
 												<div class='content' >
@@ -975,7 +975,7 @@
 								
 								<li data-groups='["web"]' >
 									<div class='inner' >
-										<img src='img/portfolio/4.jpg' alt>
+										<img src='{% static "img/portfolio/4.jpg" %}' alt>
 										
 										<div class='overlay' >
 											
@@ -988,7 +988,7 @@
 												<figure>
 													
 													<!--project popup image-->
-													<img src='img/portfolio/4.jpg' alt>
+													<img src='{% static "img/portfolio/4.jpg" %}' alt>
 												
 												</figure>
 												<div class='content' >
@@ -1012,7 +1012,7 @@
 								
 								<li data-groups='["tech"]' >
 									<div class='inner' >
-										<img src='img/portfolio/5.jpg' alt>
+										<img src='{% static "img/portfolio/5.jpg" %}' alt>
 										
 										<div class='overlay' >
 											
@@ -1025,7 +1025,7 @@
 												<figure>
 													
 													<!--project popup image-->
-													<img src='img/portfolio/5.jpg' alt>
+													<img src='{% static "img/portfolio/5.jpg" %}' alt>
 												
 												</figure>
 												<div class='content' >
@@ -1049,7 +1049,7 @@
 								
 								<li data-groups='["photography"]' >
 									<div class='inner' >
-										<img src='img/portfolio/6.jpg' alt>
+										<img src='{% static "img/portfolio/6.jpg" %}' alt>
 										
 										<div class='overlay' >
 											
@@ -1062,7 +1062,7 @@
 												<figure>
 													
 													<!--project popup image-->
-													<img src='img/portfolio/6.jpg' alt>
+													<img src='{% static "img/portfolio/6.jpg" %}' alt>
 												
 												</figure>
 												<div class='content' >
